Fix footer for mobile, where they were overlapping

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -78,7 +78,7 @@ html, body {
 .friend-input, .journey-result {
   position: absolute;
   left: 10px;
-  margin: 80px auto 80px;
+  margin: 90px auto 80px;
   background-color: rgba(255, 255, 255, 0.7);
   padding: 10px;
   border-radius: 8px;
@@ -175,6 +175,16 @@ html, body {
 }
 
 @media (max-width: 768px) {
+  .header {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .logo-container {
+    margin-bottom: 35px;
+  }
+
+
   /* Smaller margin between header links */
   .nav-link {
     margin: 0 1rem;
